--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </nav>
     </div>
 
-    <!-- Hero Section -->
+<!-- Hero Section -->
 <section id="home" class="hero">
     <div class="hero-background"></div>
     <div class="container">
@@ -76,6 +76,7 @@
             <h1>Vratite sjaj svojim farovima</h1>
             <p>Profesionalna polimerizacija i restauracija farova automobila u Pančevu</p>
             <a href="#contact" class="btn btn-primary">Zakaži termin</a>
+            <img src="img/slika 2.jpeg" alt="Polimerizacija farova" />
         </div>
     </div>
 </section>
