--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <base href="/Polimerizacija-Farova/">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Polimerizacija Farova Pančevo</title>
+    <title>Polimerizacija Farova</title>
     <meta name="description" content="Profesionalna polimerizacija i restauracija farova automobila u Pančevu. Poliranje farova, zaštita lakom, UV zaštita. Zakažite termin danas!" />
     <meta name="keywords" content="polimerizacija farova, restauracija farova, poliranje farova, zaštita farova, Pančevo, automobilski servis" />
     <meta name="author" content="Polimerizacija Farova Pančevo" />
